# ghactions_withCMake

./: CMakeLists.txt  README.md  hello.c
.github/workflows/: CMake.yml
